ამის გარეშეც მუშაობდა, უბრალოდ უნდა იფიქრო და მაიმუნივით არ დააწკაპუნო. ასევე დაემატა საბოლოო წერტილი
